# robocup-manipulation

./: .gitignore  .gitmodules  README.md  test.txt
backup/: node_test_python.py  show_current_pose.py
backup/motion_planning/: CMakeLists.txt  package.xml
backup/motion_planning/src/: listener.cpp
core/: CMakeLists.txt  package.xml
cr3_ws/: frames.gv
cr3_ws/.catkin_tools/profiles/default/: devel_collisions.txt
cr3_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
cr3_ws/devel/lib/pkgconfig/: tesr_ros_cr3_pkg.pc
cr3_ws/src/Darknet3d/: CMakeLists.txt  package.xml
cr3_ws/src/bbx2pose_server/: CMakeLists.txt  package.xml
cr3_ws/src/bbx2pose_server/srv/: d223d_service.srv
cr3_ws/src/cr3_gripper_pkg/: CMakeLists.txt
cr3_ws/src/cr3_gripper_pkg/src/: simple_gripper_control.cpp
cr3_ws/src/cr3_moveit_2/: CMakeLists.txt
cr3_ws/src/cr3_moveit_2/config/: ros_controllers.yaml
cr3_ws/src/cr3_moveit_2/launch/: chomp_planning_pipeline.launch.xml  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  run_benchmark_ompl.launch
cr3_ws/src/cr3_moveit_3/: .setup_assistant  CMakeLists.txt  package.xml
cr3_ws/src/cr3_moveit_3/config/: cr3_control.yaml  cr3_gripper_controller.yaml  cr3_robot.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ros_controllers.yaml
cr3_ws/src/cr3_moveit_3/launch/: chomp_planning_pipeline.launch.xml  cr3_control.launch  cr3_control_tuner.launch  cr3_demo_gazebo.launch  cr3_gazebo.launch  cr3_gazebo_plain.launch  cr3_robot_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  manipulation_pipeline.rviz  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  (+8 more)
cr3_ws/src/cr3_moveit_config/: .setup_assistant  package.xml
cr3_ws/src/cr3_moveit_control/: CMakeLists.txt  package.xml
cr3_ws/src/cr3_panda_pkg/: CMakeLists.txt  package.xml
cr3_ws/src/gb_visual_detection_3d_msgs/: CMakeLists.txt  package.xml
cr3_ws/src/gb_visual_detection_3d_msgs/msg/: BoundingBox3d.msg
cr3_ws/src/gb_visual_detection_3d_msgs/srv/: Detect3d.srv
cr3_ws/src/moveit_grasps/: CMakeLists.txt
cr3_ws/src/panR3_config/: .setup_assistant  CMakeLists.txt
cr3_ws/src/server_2dto3d/: CMakeLists.txt  package.xml
cr3_ws/src/tesr_ros_cr3_pkg/: CMakeLists.txt  package.xml
cr3_ws/src/test_service/: CMakeLists.txt  package.xml
cr3_ws/src/test_smach/: CMakeLists.txt  package.xml
cr3_ws/src/try_ros_service_and_client/: CMakeLists.txt  package.xml
cr3_ws/src/try_ros_service_and_client/config/: moveit_servo_config_sim.yaml
cr3_ws/src/try_ros_service_and_client/launch/: pick_service.launch
cr3_ws/src/try_ros_service_and_client/msg/: #Num.msg#  Num.msg
cr3_ws/src/try_ros_service_and_client/practice/: #global.cpp#  Animal.cpp  Animal1.cpp  Animal2.cpp  Animal3.cpp  Cuberoot.cpp  Friend.cpp  a  animal  calculator  calculator.cpp  exercise4  exercise4.cpp  friend  global.cpp  multi  multi.cpp  pointer  pointer.cpp  template  template.cpp  template1.cpp  vector  vector.cpp  virtual  virtual.cpp
cr3_ws/src/try_ros_service_and_client/src/: #pick_class_service.cpp#  #pick_service.cpp#  #rectangle_server.cpp#  add_two_ints_client.cpp  add_two_ints_server.cpp  movegroup_interface.cpp  pick_class_service.cpp  pick_client.cpp  pick_client_python.py  pick_service.cpp
cr3_ws/src/try_ros_service_and_client/srv/: smashpick.srv
cr3_ws/src/walkie2_base_description/: CMakeLists.txt  package.xml
cr3_ws/src/zamach/: CMakeLists.txt  package.xml
earth_moveit/devel/: _setup_util.py  local_setup.zsh  setup.bash  setup.sh  setup.zsh
earth_moveit/logs/moveit_tutorials/: build.make.001.log.stderr
earth_ws/src/dodo_arm_config/: .setup_assistant  CMakeLists.txt  package.xml
earth_ws/src/dodo_arm_gazebo/: CMakeLists.txt
earth_ws/src/dodo_arm_pkg/: package.xml
earth_ws/src/moveit/: CMakeLists.txt
earth_ws/src/moveit/launch/: move_group_interface_demo.launch  pick_and_place.launch  pick_and_place_ball.launch
earth_ws/src/moveit/src/: cv_node.py  move_group_interface.cpp  pick_and_place.cpp  pick_and_place_ball.cpp  pick_with_constraint.cpp
earth_ws/src/panda_moveit_config/: .setup_assistant  package.xml
earth_ws/src/ros_demo/: CMakeLists.txt  package.xml
fame_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
fame_ws/src/collision_avoidance_pick_and_place/: CMakeLists.txt  package.xml
fame_ws/src/seven_dof_arm_test/: CMakeLists.txt
gpd/: CMakeLists.txt
gpd/cfg/: ros_eigen_params.cfg  ros_vino_params.cfg
moveit_tutorials_ws/devel/: .catkin  .rosinstall  local_setup.sh
moveit_ws/devel/: local_setup.sh
moveit_ws/src/pick_place/: package.xml
panda_ws/src/: .rosinstall
panda_ws/src/moveit/: CMakeLists.txt  package.xml
panda_ws/src/panda_gripper_pkg/: CMakeLists.txt  package.xml
panda_ws/src/panda_gripper_pkg/src/: simple_gripper_control.cpp
panda_ws/src/panda_moveit_config/: .setup_assistant
ws_grasp/src/: .rosinstall  .rosinstall.bak
ws_moveit/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
ws_moveit/dodo_arm_config/: .setup_assistant  package.xml
ws_moveit/dodo_arm_config/config/: joint_limits.yaml  ompl_planning.yaml
ws_moveit/dodo_arm_config/launch/: demo.launch  gazebo.launch  ompl_planning_pipeline.launch.xml  ros_controllers.launch  setup_assistant.launch
ws_moveit/dodo_arm_config/urdf/: dodo_arm.xacro  dodo_arm_moveit.xacro  new_dodo_arm.urdf
ws_moveit/dodo_arm_gazebo/: CMakeLists.txt  package.xml
ws_moveit/dodo_arm_gazebo/launch/: dodo_arm_gazebo_control.launch  dodo_arm_world.launch
ws_moveit/dodo_arm_pkg/: CMakeLists.txt
ws_moveit/dodo_arm_pkg/launch/: view_arm.launch
ws_moveit/dodo_arm_pkg/urdf/: dodo_arm.xacro
ws_moveit/logs/moveit_tutorials/: build.check.000.log.stderr  build.make.000.log.stderr
ws_moveit/src/: .rosinstall.bak
ws_moveit/src/dodo_arm_config/: .setup_assistant  package.xml
ws_moveit/src/panda_simulation/: CMakeLists.txt  package.xml
(+463 files in other folders)
